2009-01-20  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharpBinding/CodeCompletionBugTests.cs: added unit test
	for "Bug 467507 - No completion of base members inside explicit
	events".

2009-01-20  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharpBinding/CodeCompletionAccessibleTests.cs: Added some
	tests to document bug "Bug 467409 - Bad code completion options".

2009-01-20  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor.Tests/FoldingTests.cs: Added folding unit tests.

2009-01-16  Lluis Sanchez Gual  <lluis@novell.com>

	* Makefile.am:
	* UnitTests.mdp: Update references.

2009-01-16  Lluis Sanchez Gual  <lluis@novell.com>

	* Makefile.am: Use correct noshadow option.

	* TestBase.cs: Delete the temp dir when a test run starts.

2009-01-16  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharpBinding/FindMemberVisitorTests.cs: Added some tests.

2009-01-16  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharpBinding/FindMemberVisitorTests.cs: Activated find
	event reference test.

2009-01-16  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharpBinding/CodeCompletionAccessibleTests.cs: Added
	generic parameter unit tests.

2009-01-16  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharpBinding/CodeCompletionBugTests.cs: Added test for
	"Bug 466692 - Missing completion for return/break keywords after
	yield".

2009-01-15  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Projects/LocalCopyTests.cs: Test local-copy of external
	files. Patch from Sam Chuparkoff.

2009-01-15  Mike Krüger  <mkrueger@novell.com>

	* UnitTests.mdp: unit tests are now working again.

2009-01-13  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharpBinding/FindMemberVisitorTests.cs: added find event
	tests. 

2009-01-12  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Projects/LocalCopyTests.cs: Update local-copy test to make
	sure paths are included. Covers "Bug 459311 - Copying files to output